--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,63 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.splash-nav__container {
+  display: flex;
+  align-items: center;
+  height: 70px;
+  width: 100vw;
+  border-bottom: 1px solid rgba(0,0,0,0.05);
+  background-color: black;
+  z-index: 40;
+  border-bottom: solid 4px white;
+  
+}
+
+.pixr_logout_container {
+  display: flex;
+  width: 70%;
+  justify-content: flex-end;
+  cursor: pointer;
+  text-decoration: none;
+  color: white;
+  font-size: 13px;
+  font-weight: 500;
+}
+#logout-button-holder {
+  color: #333E48;
+    padding: 10px 16px;
+border-radius: 2px;
+line-height: 16px;
+text-decoration: none;
+font-family: National2,"Helvetica Neue",Helvetica,Arial,sans-serif;
+font-size: 13px;
+font-weight: 500;
+background-color: transparent;
+justify-content: center;
+border-width: 2px;
+border-style: solid;
+border: 2px solid #333E48;
+cursor: pointer;
+background-color: white;
+}
+
+.logo{
+  display: flex;
+  font-style: Proxima Nova;
+  color: white;
+  font-weight: 10000;
+  font-size: 35px;
+  width:  200px;
+  justify-content: flex-end;
+}
+
+.login-panel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+
+}
