Create upload and display functionality of pictures

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -61,7 +61,12 @@ background-color: white;
   width:  200px;
   justify-content: flex-end;
 }
-
+.photoFeed{
+  display:flex;
+  width: 300px;
+  justify-content: center;
+  align-items: center;
+}
 .login-panel {
   display: flex;
   justify-content: center;
@@ -70,4 +75,19 @@ background-color: white;
   height: 100vh;
   background-color: black;
 
+}
+
+#uploadForm {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+#feedContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%
 }
